metadata/force-app/main/default/objects/CustomName_AUPJm__c/CustomName_AUPJm__c.object-meta.xml
<CustomObject>
    <description>Description_ZTSWJ</description>
    <label>CustomLabel_ATodd</label>
    <nameField>
        <label>CustomLabel_ATodd</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_ATodds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>