metadata/force-app/main/default/objects/CustomName_AUPJm__c/fields/CustomField_lPCSO__c.field-meta.xml
<CustomField>
    <fullName>CustomField_lPCSO__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldcSJOA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>