metadata/force-app/main/default/objects/CustomName_AUPJm__c/fields/CustomField_taVlO__c.field-meta.xml
<CustomField>
    <fullName>CustomField_taVlO__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldGuHKb</label>
    <length>255</length>
    <type>Text</type>
</CustomField>